--- a/client/src/styles/VideoCall.module.css
+++ b/client/src/styles/VideoCall.module.css
@@ -76,9 +76,35 @@
   color: rgb(250, 2, 2);
 }
 
+.button_disconnect {
+  background-color:  rgb(245, 57, 57);
+  color: white;
+  border: none;
+  width: 50px;
+  height: 50px;
+  font-size: 30px;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 10px;
+}
+
+.button_disconnect:hover{
+  background-color:  rgb(223, 68, 68);
+}
+
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50% , -50%);
+  transform: translate(-50%, -50%);
+}
+
+.callEnd {
+  display: none;
+}
+
+.hidden{
+  display: none;
 }
