--- a/client/src/styles/Modal.module.css
+++ b/client/src/styles/Modal.module.css
@@ -1,3 +1,7 @@
+.general{
+    z-index: 1000 !important;
+}
+
 .modal_info {
  /* Centra vertical y horizontalmente */
   width: 400px; /* Ancho del elemento */
@@ -9,6 +13,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  
 }
 
 
