--- a/client/src/styles/Slider.module.css
+++ b/client/src/styles/Slider.module.css
@@ -13,6 +13,7 @@
   width: 300px;
   border-radius: 50px 0 0 50px;
   z-index: 1001;
+  position: relative;
 }
 
 .container_search {
@@ -53,6 +54,13 @@
   background-color: white;
 }
 
+
+.profile{
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+
 @media screen and (max-width: 850px) {
   .container {
     transform: translateX(100%); 
@@ -75,3 +83,6 @@
     transition: transform 0.5s ease; 
   }
 }
+
+
+
