--- a/client/src/styles/SearchPeople.module.css
+++ b/client/src/styles/SearchPeople.module.css
@@ -86,6 +86,10 @@
   height: 30px;
   width: 30px;
   font-size: 1.5rem;
+  cursor: pointer;
+}
+.requestButton:hover{
+  background-color: #16b47a ;
 }
 
 
