--- a/client/src/styles/SearchFriends.module.css
+++ b/client/src/styles/SearchFriends.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     background-color: white;
     border-radius: 20px;
-    margin-top: 10px;
+    margin: 40px;
 }
 
 .input{
