style: :art: desing video user small ok

--- a/client/src/styles/VideoCall.module.css
+++ b/client/src/styles/VideoCall.module.css
@@ -129,3 +129,21 @@
   }
   
 }
+@media screen and (max-width: 650px) {
+  .video_user.large {
+    width: 90vw; /* Tamaño grande */
+    height: auto;
+  }
+  
+  .video_user.small {
+    width: 100px; /* Tamaño pequeño */
+    height: 100%;
+  }
+
+
+  .video {
+    width: 90vw;
+    height: 100%;
+  }
+  
+}
