feat: :sparkles: changes validation schemas

--- a/client/src/styles/Register.module.css
+++ b/client/src/styles/Register.module.css
@@ -53,6 +53,11 @@
   margin-right: 10px;
 }
 
+.error_message{
+  font-size: 0.9rem;
+  margin-left: 10px;
+}
+
 
 
 @media screen and (max-width: 400px) {
