--- a/client/src/styles/Login.module.css
+++ b/client/src/styles/Login.module.css
@@ -52,6 +52,13 @@
     background-color: #74acf0;
 }
 
+
+.error_message{
+  font-size: 0.9rem;
+  margin-left: 10px;
+}
+
+
 @media screen and (max-width: 400px) {
     .form{
        width: 320px;
