--- a/client/src/styles/ListFriend.module.css
+++ b/client/src/styles/ListFriend.module.css
@@ -18,7 +18,8 @@
     height: 40px;
     object-fit: cover;
     border-radius: 50px;
-    margin: 0 10px
+    margin: 0 10px;
+    cursor: pointer;
 }
 
 
@@ -55,3 +56,4 @@
     border-radius: 50px;
     margin-left: 10px;
 }
+
