--- a/client/src/styles/FriendProfile.module.css
+++ b/client/src/styles/FriendProfile.module.css
@@ -47,3 +47,15 @@
     width: 25px;
     height: 25px;
 }
+
+.button{
+    background-color: red;
+    border: none;
+    color: white;
+    height: 25px;
+    width: 50px;
+    border-radius: 15px ;
+}
+.button:hover{
+    background-color: rgb(192, 2, 2);
+}
